@startuml

title __ATTACKS's Class Diagram__\n

  package com.rear_admirals.york_pirates {
    package com.rear_admirals.york_pirates.screen {
      package com.rear_admirals.york_pirates.screen.combat {
        package com.rear_admirals.york_pirates.screen.combat.attacks {
          class Attack {
              # name : String
              # desc : String
              # damage : int
              # dmgMin : int
              # dmgMax : int
              # accPercent : int
              # skipMoveStatus : boolean
              # skipMove : boolean
              {static} + attackMain : Attack
              {static} + attackSwivel : Attack
              {static} + attackBoard : Attack
              # Attack()
              # Attack()
              # doesHit()
              + doAttack()
              + getName()
              + getDesc()
              + isSkipMove()
              + isSkipMoveStatus()
              + setSkipMoveStatus()
          }
        }
      }
    }
  }
  

  package com.rear_admirals.york_pirates {
    package com.rear_admirals.york_pirates.screen {
      package com.rear_admirals.york_pirates.screen.combat {
        package com.rear_admirals.york_pirates.screen.combat.attacks {
          class DoubleShot {
              {static} + attackDouble : Attack
              # DoubleShot()
              + doAttack()
          }
        }
      }
    }
  }
  

  package com.rear_admirals.york_pirates {
    package com.rear_admirals.york_pirates.screen {
      package com.rear_admirals.york_pirates.screen.combat {
        package com.rear_admirals.york_pirates.screen.combat.attacks {
          class ExplosiveShell {
              {static} + attackExplosive : Attack
              # ExplosiveShell()
              + doAttack()
          }
        }
      }
    }
  }
  

  package com.rear_admirals.york_pirates {
    package com.rear_admirals.york_pirates.screen {
      package com.rear_admirals.york_pirates.screen.combat {
        package com.rear_admirals.york_pirates.screen.combat.attacks {
          class Flee {
              {static} + attackFlee : Flee
              # Flee()
              + doAttack()
          }
        }
      }
    }
  }
  

  package com.rear_admirals.york_pirates {
    package com.rear_admirals.york_pirates.screen {
      package com.rear_admirals.york_pirates.screen.combat {
        package com.rear_admirals.york_pirates.screen.combat.attacks {
          class GrapeShot {
              {static} + attackGrape : Attack
              + GrapeShot()
              + doAttack()
          }
        }
      }
    }
  }
  

  package com.rear_admirals.york_pirates {
    package com.rear_admirals.york_pirates.screen {
      package com.rear_admirals.york_pirates.screen.combat {
        package com.rear_admirals.york_pirates.screen.combat.attacks {
          class Ram {
              {static} + attackRam : Attack
              # Ram()
              + doAttack()
          }
        }
      }
    }
  }
  

  DoubleShot -up-|> Attack
  ExplosiveShell -up-|> Attack
  Flee -up-|> Attack
  GrapeShot -up-|> Attack
  Ram -up-|> Attack


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
